@@ -1,3 +1,14 @@
+2010-03-02  Jian Li  <jianli@chromium.org>
+
+        Reviewed by Nate Chapin.
+
+        [V8] DOMCoreException should be visible as DOMException 
+        https://bugs.webkit.org/show_bug.cgi?id=35552
+
+        Fix V8 code generator to use the correct visible name.
+
+        * bindings/scripts/CodeGeneratorV8.pm:
+
 2010-03-02  Brady Eidson  <beidson@apple.com>
 
         Reviewed by Sam Weinig.
